--- a/views/result.hbs
+++ b/views/result.hbs
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-end my-4">
-        <a href="/" type="button" class="btn btn-outline-dark float-right d-md-100 mr-3" id="button-back">Volver</a>
+        <a href="/" class="btn btn-outline-dark float-right d-md-100 mr-3" id="button-back">Volver</a>
     </div>
 </div>
 
